app-pipeline-332488.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-pipeline-332488
  name: app-pipeline-332488
  namespace: debjyoti
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-pipeline-332488
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: app-pipeline-332488
      labels:
        app: app-pipeline-332488
    spec:
      containers:
      - name: app-pipeline-332488
        image: debjyotidas/app-pipeline-332488:1.0.0
        resources:
          requests:
            cpu: 100m
            memory: 1024Mi
          limits:
            cpu: 1000m
            memory: 2048Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-pipeline-332488
  name: app-pipeline-332488
  namespace: debjyoti
spec:
  type: ClusterIP
  ports:
  - port: 8090
  selector:
    app: app-pipeline-332488
