jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: jenkins-332488
  name: jenkins-332488
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-332488
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jenkins-332488
    spec:
      serviceAccountName: jenkins-332488
      securityContext:
        fsGroup: 1000
        runAsUser: 0
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: jenkins-storage
        persistentVolumeClaim:
          claimName: jenkins-332488
      - name: docker-socket
        hostPath:
          path: /var/run/docker.sock
      containers:
      - image: jenkins/jenkins:2.235.1-lts-alpine
        name: jenkins-332488
        resources:
          requests:
            cpu: 50m
            memory: 1024Mi
          limits:
            cpu: 1000m
            memory: 2048Mi
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 50000
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: "/var/jenkins_home"
          name: jenkins-storage
        - mountPath: /var/run/docker.sock
          name: docker-socket
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: jenkins-332488
  name: jenkins-332488
spec:
  type: ClusterIP
  ports:
  - name: ui
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: slave
    port: 50000
    protocol: TCP
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: jenkins-332488
